fourth commit-cascading deletion

--- a/.env
+++ b/.env
@@ -5,3 +5,8 @@ SALT_ROUNDS = 10
 CONFIRMATION_SECRET = confirm948784&8@
 RESET_PASSWORD_SECRET = reset45!^61543@$
 PREFIX_SECRET= jobapp 
+NODE_MAILER_HOST= localhost
+NODE_MAILER_PORT= 587
+NODE_MAILER_SERVICE= gmail
+NODE_MAILER_USER= mostafaoffa45@gmail.com
+NODE_MAILER_PASS= ktpwkwlxmpjvltyq
